--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="logo">
             <img src="./images/odin-lined.png" alt="Theodin logo">
-     <span>ODIN</span>
+     <span style="font-family: Norse;">ODIN</span>
     </div>
         <div class="right">
          <div class="content">
